AM_CPPFLAGS = -I$(top_srcdir)/include
AM_YFLAGS = -d

bin_PROGRAMS = ircd umkpasswd convert-conf
noinst_PROGRAMS = table_gen

BUILT_SOURCES = ircd_parser.h chattr.tab.c version.c
CLEANFILES = chattr.tab.c version.c

ircd_SOURCES = \
	IPcheck.c \
	channel.c \
	class.c \
	client.c \
	crule.c \
	dbuf.c \
	destruct_event.c \
	fileio.c \
	gline.c \
	hash.c \
	ircd.c \
	ircd_alloc.c \
	ircd_crypt.c \
	ircd_events.c \
	ircd_features.c \
	ircd_lexer.c \
	ircd_log.c \
	ircd_netconf.c \
	ircd_relay.c \
	ircd_reply.c \
	ircd_res.c \
	ircd_reslib.c \
	ircd_signal.c \
	ircd_snprintf.c \
	ircd_string.c \
	jupe.c \
	list.c \
	listener.c \
	m_account.c \
	m_admin.c \
	m_asll.c \
	m_away.c \
	m_burst.c \
	m_cap.c \
	m_clearmode.c \
	m_close.c \
	m_config.c \
	m_connect.c \
	m_cprivmsg.c \
	m_create.c \
	m_defaults.c \
	m_destruct.c \
	m_desynch.c \
	m_die.c \
	m_endburst.c \
	m_error.c \
	m_get.c \
	m_gline.c \
	m_help.c \
	m_info.c \
	m_invite.c \
	m_ison.c \
	m_join.c \
	m_jupe.c \
	m_kick.c \
	m_kill.c \
	m_links.c \
	m_list.c \
	m_lusers.c \
	m_map.c \
	m_mode.c \
	m_motd.c \
	m_names.c \
	m_nick.c \
	m_notice.c \
	m_oper.c \
	m_opmode.c \
	m_part.c \
	m_pass.c \
	m_ping.c \
	m_pong.c \
	m_privmsg.c \
	m_privs.c \
	m_proto.c \
	m_pseudo.c \
	m_quit.c \
	m_rehash.c \
	m_reset.c \
	m_restart.c \
	m_rping.c \
	m_rpong.c \
	m_sasl.c \
	m_server.c \
	m_set.c \
	m_settime.c \
	m_silence.c \
	m_squit.c \
	m_stats.c \
	m_time.c \
	m_topic.c \
	m_trace.c \
	m_uping.c \
	m_user.c \
	m_userhost.c \
	m_userip.c \
	m_version.c \
	m_wallchops.c \
	m_wallops.c \
	m_wallusers.c \
	m_wallvoices.c \
	m_webirc.c \
	m_who.c \
	m_whois.c \
	m_whowas.c \
	m_xquery.c \
	m_xreply.c \
	match.c \
	memdebug.c \
	motd.c \
	msgq.c \
	numnicks.c \
	opercmds.c \
	os_generic.c \
	packet.c \
	parse.c \
	querycmds.c \
	random.c \
	s_auth.c \
	s_bsd.c \
	s_conf.c \
	s_debug.c \
	s_err.c \
	s_misc.c \
	s_numeric.c \
	s_serv.c \
	s_stats.c \
	s_user.c \
	sasl.c \
	send.c \
	uping.c \
	userload.c \
	websocket.c \
	whocmds.c \
	whowas.c \
	ircd_parser.y \
	ircd_md5.c \
	ircd_crypt_plain.c \
	ircd_crypt_smd5.c \
	ircd_crypt_native.c

EXTRA_ircd_SOURCES = \
	engine_devpoll.c \
	engine_epoll.c \
	engine_kqueue.c \
	engine_poll.c \
	engine_select.c

ircd_DEPENDENCIES = $(ENGINE_C:.c=.$(OBJEXT)) version.o
ircd_LDADD = $(ENGINE_C:.c=.$(OBJEXT)) version.o

umkpasswd_SOURCES = \
	ircd_md5.c \
	ircd_crypt_plain.c \
	ircd_crypt_smd5.c \
	ircd_crypt_native.c \
	ircd_alloc.c \
	ircd_string.c \
	memdebug.c \
	umkpasswd.c

convert_conf_SOURCES = convert-conf.c

table_gen_SOURCES = table_gen.c

# Generated source: character attribute table
chattr.tab.c: table_gen$(EXEEXT)
	./table_gen$(EXEEXT) > $@

ircd_string.o: chattr.tab.c

# Generated source: version info (always rebuilt)
.PHONY: version.c
version.c: version.c.SH $(top_srcdir)/include/patchlist.h umkpasswd$(EXEEXT)
	$(SHELL) $(srcdir)/version.c.SH $(top_srcdir)

$(top_srcdir)/include/patchlist.h:
	echo '/* This file was automatically generated by ircd-patch */' > $@
	echo '#define PATCHLIST ""' >> $@

# Custom install logic preserving original behavior
install-exec-hook:
	@if [ ! -d $(DESTDIR)$(DPATH) -a ! -f $(DESTDIR)$(DPATH) ]; then \
	  echo "Creating directory $(DESTDIR)$(DPATH)"; \
	  $(MKDIR_P) $(DESTDIR)$(DPATH); \
	  chmod 700 $(DESTDIR)$(DPATH); \
	  chown $(IRCDOWN) $(DESTDIR)$(DPATH); \
	  chgrp $(IRCDGRP) $(DESTDIR)$(DPATH); \
	fi
	@if [ "$(INSTALL_RULE)" = "install-with-symlink" ]; then \
	  ircd_tag=`date +%Y%m%d%H%M`; \
	  echo "Installing ircd as $(DESTDIR)$(bindir)/ircd.$$ircd_tag"; \
	  mv $(DESTDIR)$(bindir)/ircd $(DESTDIR)$(bindir)/ircd.$$ircd_tag; \
	  cd $(DESTDIR)$(bindir) && rm -f $(SYMLINK) && $(LN_S) ircd.$$ircd_tag $(SYMLINK); \
	fi
	chmod $(IRCDMODE) $(DESTDIR)$(bindir)/ircd*
	chown $(IRCDOWN) $(DESTDIR)$(bindir)/ircd*
	chgrp $(IRCDGRP) $(DESTDIR)$(bindir)/ircd*
	$(INSTALL_DATA) -m 600 $(top_srcdir)/doc/example.conf $(DESTDIR)$(DPATH)/example.conf
	chown $(IRCDOWN) $(DESTDIR)$(DPATH)/example.conf
	chgrp $(IRCDGRP) $(DESTDIR)$(DPATH)/example.conf

EXTRA_DIST = \
	version.c.SH \
	table_gen.c
